# proxrs

./: .gitignore  Cargo.toml  README.md  TODO.md  example.env
src/: admin.rs  auth.rs  config.rs  database.rs  db.rs  error.rs  login.rs  main.rs  proxy.rs  session.rs  state.rs  token.rs  utils.rs
src/conf/: config.rs  init.rs  mod.rs  options.rs
src/config/: config_store.rs  error.rs  init.rs  mod.rs  options.rs  store.rs
src/db/: database.rs  db.rs  error.rs  mod.rs
src/routes/: admin.rs  login.rs  mod.rs  proxy.rs
src/routes/auth/: login.rs  logout.rs  mod.rs
src/services/: mod.rs  proxy.rs
src/sess/: session.rs  sessions.rs
src/tokens/: mod.rs  session.rs  sessions.rs
static/: admin.html  admin.tera.html  error_activities.json  internal_error.html  login.html  login.tera.html
