[package]
name = "proxrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }

hashbrown = "0.13"
thiserror = "1.0"
dotenv = "0.15"

strum_macros = "0.24"
strum = "0.24"
