[package]
name = "proxrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Tokio stack
hyper = { version = "0.14", features = ["full"] } # remove full
tokio = { version = "1.0", features = ["full"] }  # remove full

# Other dependencies
axum-extra = { version = "0.7", features = ["cookie"] }
rusqlite = { version = "0.29", features = ["bundled"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
strum_macros = "0.24"
urlencoding = "2.1"
hyper-tls = "0.5.0"
hashbrown = "0.13"
thiserror = "1.0"
dotenv = "0.15"
strum = "0.24"
axum = "0.6"
